--- a/app/views/layouts/_list_ideas.html.erb
+++ b/app/views/layouts/_list_ideas.html.erb
@@ -7,7 +7,7 @@
     <div class="container collapse-group">
       <div class="panel panel-default">
         <% if idea.histories.last.basket == "New" %>
-          <div class="panel-heading idea-top new-idea">
+          <div class="panel-heading idea-top idea-new">
         <% end %>
         <% if idea.histories.last.basket == "Approved" %>
           <div class="panel-heading idea-top approved-idea">
