Edit editing ideas

--- a/app/views/ideas/edit.html.erb
+++ b/app/views/ideas/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Idea</h1>
-
-<%= render 'edit_ideas_tags' %>
-
-<%= link_to (t :show), @idea %> |
-<%= link_to (t :back), ideas_path %>
+<div class="container">
+  <h1>Editing Idea</h1>
+  <%= render 'edit_ideas_tags' %>
+  <%= link_to (t :show), @idea %> |
+  <%= link_to (t :back), ideas_path %>
+</div>
