--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -53,14 +53,15 @@
     <% (t :likes) %>
   <% end %>
   <!-- End sort -->
-
+  <!-- Search form -->
   <%= search_form_for @q, url: search_ideas_path(basket: params[:basket]),
                           html: { method: :post } do |f| %>
-    <%= f.label :topic_cont %>
-    <%= f.search_field :topic_cont %>
+    <%= f.label (t :search_form) %>
+    <%= f.search_field :topic_or_text_cont %>
 
     <%= f.submit %>
   <% end %>
+  <!-- End Search form -->
 </div>
 <!-- End top bar -->
 
