--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -50,6 +50,13 @@
         <%= link_to (t :post_idea), new_idea_path %>
       </span>
     <% end %>
+    <!-- Search form -->
+    <%= search_form_for @q, class: 'search-bar', url: search_ideas_path(basket: params[:basket]),
+                            html: { method: :post } do |f| %>
+      <%= f.search_field :topic_or_text_cont %>
+      <%= f.submit (t :search_form), class: 'search-button' %>
+    <% end %>
+    <!-- End Search form -->
   </div>
   <!-- End sort -->
   <!-- Search form -->
