--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,9 +28,7 @@
 	      </li>
 	    </ul>
       <ul class='nav navbar-nav navbar-middle'>
-        <p>
-          Hydea <!-- Linkki hydea.hyy.fi -->
-        </p>
+        <%= link_to "Hydea", root_path %>
       </ul>
       <ul class='nav navbar-nav navbar-right'>
         <li>
