--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,10 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
       	</button>
-      	<%=image_tag("logo/hyy-seppele.png", alt: "Hyy Logo", class: 'navbar-brand')%>
+        <%= link_to root_path do %>
+      	 <%=image_tag("logo/hyy-seppele.png", alt: "Hyy Logo", class: 'navbar-brand brand-logo')%>
+        <% end %>
+        <%= link_to "Hydea", root_path, class: 'navbar-brand brand-text' %>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
 	    <ul class="nav navbar-nav">
