--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,7 +1,9 @@
 <!-- Container for top bar -->
 <div class="container">
   <p id="notice"><%= notice %></p>
-
+  <% if not current_user.nil? and current_user.moderator %>
+    <%= link_to (t :export), ideas_export_path(basket: params[:basket], format: "csv"), class: 'btn btn-success' %> 
+  <% end %>
   <!-- Show baskets -->
   <ul class="nav nav-tabs nav-justified">
     <% if not session[:user_id].nil? and current_user.moderator %>
