--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -81,7 +81,7 @@
     <div class="col-sm-3">
       <% @idea.histories.each do |history|%>
         <p>
-          <strong><%=history.basket%></strong>:<br>
+          <strong><%=(t history.basket)%></strong>:<br>
           <%= history.time.strftime('%d.%m.%Y %H:%M ') %><br>
           <% if not history.basket == 'New' %>
             <%= history.user.name %>
