Add empty basket clause

--- a/app/views/layouts/_list_ideas.html.erb
+++ b/app/views/layouts/_list_ideas.html.erb
@@ -1,4 +1,4 @@
-<% if @ideas.nil? %>
+<% if @ideas.nil? or @ideas.empty? %>
   <div class="container">
     "THIS SHOULD BE SHOWN IF BASKET IS EMPTY"
   </div>
