--- a/app/views/layouts/_list_ideas.html.erb
+++ b/app/views/layouts/_list_ideas.html.erb
@@ -1,6 +1,8 @@
-<% if @ideas.nil? %>
+<% if @ideas.nil? or @ideas.empty? %>
   <div class="container">
-    <!-- ohjataan Approved ideas baskettiin -->
+    <div class="empty-basket-text" >
+    <%= (t :no_ideas) %>
+    </div>
   </div>
 <% else %>
   <%@ideas.each do |idea|%>
