--- a/app/views/layouts/_list_ideas.html.erb
+++ b/app/views/layouts/_list_ideas.html.erb
@@ -1,6 +1,8 @@
 <% if @ideas.nil? or @ideas.empty? %>
   <div class="container">
-    <%= (t :no_ideas) class="empty-basket-text"%>
+    <div class="empty-basket-text" >
+    <%= (t :no_ideas) %>
+    </div>
   </div>
 <% else %>
   <%@ideas.each do |idea|%>
