--- a/app/views/ideas/new.html.erb
+++ b/app/views/ideas/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-<h1><%= (t :post_idea)  %></h1>
+<h1 class="add-idea-topic"><%= (t :post_idea) %></h1>
 
 	<%= render 'form' %>
 
