--- a/app/views/ideas/_form.html.erb
+++ b/app/views/ideas/_form.html.erb
@@ -12,20 +12,24 @@
   <% end %>
 
   <div class="field">
-    <%= f.label (t :topic) %><br>
+    <%= f.label (t :topic), class: 'add-idea-label' %><br>
     <%= f.text_field :topic, :class => "form-control"  %>
   </div>
   <div class="field">
-    <%= f.label (t :text) %><br>
+    <%= f.label (t :text), class: 'add-idea-label' %><br>
     <%= f.text_area :text, :class => "form-control", :rows => "5" %>
   </div>
 
   <div class="field">
-    <%= f.label (t :tags) %><br>
+    <%= f.label (t :tags), class: 'add-idea-label' %><br>
+    <div class="add-idea-tags">
       <% if Tag.all.each do |menutag| %>
-        <%= check_box_tag 'idea[tags][]', menutag.text%>
-        <%= menutag.text %>
+        <div class="add-idea-tag">
+          <%= check_box_tag 'idea[tags][]', menutag.text%><br />
+          <%= menutag.text %>
+        </div>
       <%end%>
+    </div>
     <% end %>
   </div>
   <div class="actions">
