Localize show idea comment button

--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -137,7 +137,7 @@
          <%= (t :comment) %>
         </p>
         <%= f.text_area :text,class: "form-control", rows: "5", id: "comment"%>
-          <button type="submit" class="btn btn-primary">Send </button>
+        <button type="submit" class="btn btn-primary"><%= (t :send) %> </button>
         <% end %>
       </div>
 
