--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -183,11 +183,11 @@ tr:nth-child(even){
 }
 
 .navbar-header{
-	padding-left: 50px;
+	padding-left: 15px;
 }
 
 .navbar-nav{
-	padding: 25px;
+	padding: 25px 0 25px 0;
 }
 
 .navbar-middle{
@@ -708,6 +708,23 @@ h2{
 
 // smaller screen styles
 
+@media only screen and (max-width: 1366px) {
+	.brand-logo{
+		display: none;
+	}
+
+	.navbar-middle{
+		display: none;
+	}
+
+	.brand-text{
+		padding-top: 39px;
+		display: inline;
+		text-transform: uppercase;
+		font-size: 24px;
+	}
+}
+
 @media only screen and (max-width: 1120px) {
 	.navbar-header {
 		padding-left: 0px;
@@ -728,6 +745,14 @@ h2{
 	.nav-tabs-justified > li{
 		height: 50px;
 		border: 1px solid #fff;
+	}
+
+	.navbar-nav{
+		padding: 25px 10px 25px 10px;
+	}
+
+	.nav > li > a{
+		padding: 15px 10px;
 	}
 }
 
@@ -759,7 +784,7 @@ h2{
 	}
 
 	.navbar-nav{
-		padding: 25px 15px 25px 15px;
+		padding: 25px 10px 25px 10px;
 	}
 
 	.nav > li > a{
